hero fix for overflow-x

--- a/app/scss/sections/_hero.scss
+++ b/app/scss/sections/_hero.scss
@@ -4,6 +4,7 @@
   display: flex;
   gap: 2rem;
   position: relative;
+  overflow: hidden;
 
   @include breakpoint(md-tablet) {
     flex-direction: column;
